syntax = "proto3";

option go_package = "github.com/teralion/live-connections/server/proto/disk";

package disk;

service AreaManager {
  rpc Create(CreateAreaRequest) returns (CreateAreaResponse);
  rpc ListUsers(ListAreaUsersRequest) returns (ListAreaUsersResponse);
  rpc HasUser(HasUserRequest) returns (HasUserResponse);
}

message Area {
  string name = 1;
}

message CreateAreaRequest {}

message CreateAreaResponse {
  string name = 1;
}

message ListAreaUsersRequest {
  string name = 1;
}

message ListAreaUsersResponse {
  repeated string users = 1;
}

message HasUserRequest {
  string area = 1;
  string user = 2;
}

message HasUserResponse {
  bool result = 1;
}

service UserManager {
  rpc Add(AddUserRequest) returns (AddUserResponse);
  rpc Write(WriteUserRequest) returns (WriteUserResponse);
  rpc Read(ReadUserRequest) returns (ReadUserResponse);
}

message User {
  string name = 1;
}

message MouseMoveCoords {
  float xPos = 1;
  float yPos = 2;
}

message TextInput {
  string value = 1;
}

message WriteUserRequest {
  string area = 1;
  string name = 2;
  bytes message = 3;
}

message WriteUserResponse {}

enum MessageType {
  MOUSE_MOUVE = 0;
  TEXT_INPUT = 1;
}

message ReadUserRequest {
  string area = 1;
  string name = 2;
  MessageType messageType = 3;
}

message ReadUserResponse {
  bytes message = 1;
}

message AddUserRequest {
  string area = 1;
}

message AddUserResponse {
  string name = 1;
}

service ShapeManager {
  rpc Move(MoveShapeRequest) returns (MoveShapeResponse);
}

message Shape {
  int32 xPos = 1;
  int32 yPos = 2;
}

message MoveShapeRequest {}

message MoveShapeResponse {}